// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package kuscia.proto.api.v1alpha1.datamesh;

import "kuscia/proto/api/v1alpha1/common.proto";

option go_package = "github.com/secretflow/kuscia/proto/api/v1alpha1/datamesh";
option java_package = "org.secretflow.v1alpha1.datamesh";

service DomainDataGrantService {
  rpc CreateDomainDataGrant(CreateDomainDataGrantRequest)
      returns (CreateDomainDataGrantResponse);

  rpc QueryDomainDataGrant(QueryDomainDataGrantRequest)
      returns (QueryDomainDataGrantResponse);

  rpc UpdateDomainDataGrant(UpdateDomainDataGrantRequest)
      returns (UpdateDomainDataGrantResponse);

  rpc DeleteDomainDataGrant(DeleteDomainDataGrantRequest)
      returns (DeleteDomainDataGrantResponse);
}

message GrantLimit {
  int64 expiration_time = 1;
  int32 use_count = 2;
  string flow_id = 3;
  repeated string components = 4;
  string initiator = 5;
  string input_config = 6;
}

message DomainDataGrantData {
  string domaindatagrant_id = 1;
  string author = 2;
  string domaindata_id = 3;
  string grant_domain = 4;
  GrantLimit limit = 5;
  map<string, string> description = 6;
  string signature = 7;
}

message CreateDomainDataGrantRequest {
  RequestHeader header = 1;
  string domaindatagrant_id = 2;
  string domaindata_id = 3;
  string grant_domain = 4;
  GrantLimit limit = 5;
  map<string, string> description = 6;
}

message CreateDomainDataGrantResponse {
  Status status = 1;
  CreateDomainDataGrantResponseData data = 2;
}

message CreateDomainDataGrantResponseData {
  // id of created domaindatagrant
  string domaindatagrant_id = 1;
}

message UpdateDomainDataGrantRequest {
  RequestHeader header = 1;
  string domaindatagrant_id = 2;
  string domaindata_id = 3;
  string grant_domain = 4;
  GrantLimit limit = 5;
  map<string, string> description = 6;
}

message UpdateDomainDataGrantResponse { Status status = 1; }

message DeleteDomainDataGrantRequest {
  RequestHeader header = 1;
  string domaindatagrant_id = 2;
}

message DeleteDomainDataGrantResponse { Status status = 1; }

message QueryDomainDataGrantRequest {
  RequestHeader header = 1;
  string domaindatagrant_id = 2;
}

message QueryDomainDataGrantResponse {
  Status status = 1;
  DomainDataGrantData data = 2;
}
